[gd_scene load_steps=4 format=3 uid="uid://cc141b611ya43"]

[ext_resource type="Script" uid="uid://dc7gnmr31l35d" path="res://ui/inventory/InventoryPanel.gd" id="1_smghy"]
[ext_resource type="Texture2D" uid="uid://cg3bv0qdb65k0" path="res://assets/Ui/Inventory/Inventory_background.png" id="2_ay77t"]
[ext_resource type="Texture2D" uid="uid://br6ny702vondk" path="res://assets/Ui/Inventory/Inventory_select.png" id="3_ay77t"]

[node name="InventoryPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -150.0
offset_right = 185.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_smghy")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ay77t")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Inventory" type="Control" parent="MarginContainer/PanelLayout"]
custom_minimum_size = Vector2(350, 172)
layout_mode = 2
mouse_filter = 1

[node name="InventoryGrid" type="GridContainer" parent="MarginContainer/PanelLayout/Inventory"]
z_index = 1
custom_minimum_size = Vector2(360, 172)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="HoverIndicator" type="TextureRect" parent="MarginContainer/PanelLayout/Inventory"]
visible = false
z_index = 5
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("3_ay77t")
stretch_mode = 5

[node name="CloseButton" type="Button" parent="MarginContainer/PanelLayout"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Close"
